--- a/install
+++ b/install
@@ -29,13 +29,12 @@ go get -u github.com/haccer/subjack
 go get -u github.com/tomnomnom/qsreplace
 go get -u github.com/tomnomnom/hacks/filter-resolved
 go get -u -v github.com/lc/gau
-GO111MODULE=on go get -u -v github.com/projectdiscovery/subfinder/v2/cmd/subfinder
-GO111MODULE=on go get -u -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei
-GO111MODULE=on go get -u -v github.com/projectdiscovery/naabu/v2/cmd/naabu
-GO111MODULE=on go get -u -v github.com/projectdiscovery/dnsprobe
-GO111MODULE=on go get -u -v github.com/projectdiscovery/shuffledns/cmd/shuffledns
-GO111MODULE=auto go get -u -v github.com/projectdiscovery/httpx/cmd/httpx
-
+GO111MODULE=on go get -v github.com/projectdiscovery/subfinder/v2/cmd/subfinder
+GO111MODULE=on go get -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei
+GO111MODULE=on go get -v github.com/projectdiscovery/httpx/cmd/httpx
+GO111MODULE=on go get -v github.com/projectdiscovery/naabu/v2/cmd/naabu
+GO111MODULE=on go get -v github.com/projectdiscovery/shuffledns/cmd/shuffledns
+GO111MODULE=on go get -v github.com/projectdiscovery/dnsx/cmd/dnsx
 #Go tools installed in one shot
 cd $home/go/bin; sudo mv * /usr/bin/
 
