--- a/install
+++ b/install
@@ -1,26 +1,42 @@
 sudo apt install -y dirb; sudo apt install -y dirbuster; sudo apt install -y exiftool; sudo apt install -y exploitdb; sudo apt install -y gcc; sudo apt install -y git; sudo apt install -y gpp; sudo apt install -y gpp-decrypt; sudo apt install -y hashcat; sudo apt install -y hash-identifier; sudo apt install -y joomscan; sudo apt install -y jsql; sudo apt install -y knockpy; sudo apt install -y libcurl4-openssl-dev; sudo apt install -y linux-exploit-suggester; sudo apt install -y masscan; sudo apt install -y metasploit-framework; sudo apt install -y mitmproxy; sudo apt install -y mlocate; sudo apt install -y msfpc; sudo apt install -y ncrack; sudo apt install -y neofetch; sudo apt install -y netcat; sudo apt install -y net-tools; sudo apt install -y nmap; sudo apt install -y nodejs; sudo apt install -y npm; sudo apt install -y openvpn; sudo apt install -y pdf-parser; sudo apt install -y perl; sudo apt install -y phantomjs; sudo apt install -y pipenv; sudo apt install -y powersploit; sudo apt install -y python3; sudo apt install -y python3-capstone; sudo apt install -y python3-distorm3; sudo apt install -y python3-pip; sudo apt install -y python-dev; sudo apt install -y python-distorm3; sudo apt install -y python-dnspython; sudo apt install -y python-setuptools; sudo apt install -y rainbowcrack; sudo apt install -y reaver; sudo apt install -y recon-ng; sudo apt install -y rename; sudo apt install -y ruby; sudo apt install -y ruby-dev; sudo apt install -y ruby-full; sudo apt install -y screenfetch; sudo apt install -y sfuzz; sudo apt install -y smtp-user-enum; sudo apt install -y sqlmap; sudo apt install -y sublist3r; sudo apt install -y wafw00f; sudo apt install -y websploit; sudo apt install -y weevely; sudo apt install -y wfuzz; sudo apt install -y whatweb; sudo apt install -y whois; sudo apt install -y wireshark; sudo apt install -y wpscan; sudo apt install -y yarn
 
-go get -u github.com/tomnomnom/assetfinder
-go get -u github.com/tomnomnom/gf
-go get -u github.com/tomnomnom/gron
-go get -u github.com/tomnomnom/meg
-go get -u github.com/tomnomnom/anew
-go get -u github.com/hakluke/hakrawler
-go get -u github.com/tomnomnom/httprobe
-go get -u github.com/tomnomnom/unfurl
-go get -u github.com/tomnomnom/waybackurls
-go get -u github.com/jaeles-project/gospider
-go get -u github.com/tomnomnom/qsreplace
-go get -u github.com/tomnomnom/hacks/filter-resolved
-go get -u -v github.com/lc/gau
-go get github.com/haccer/subjack
-go get -u github.com/ffuf/ffuf
-go get github.com/eth0izzle/shhgit
-go get -u github.com/x1sec/commit-stream
-GO111MODULE=on go get -v github.com/projectdiscovery/subfinder/v2/cmd/subfinder
-GO111MODULE=on go get -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei
-GO111MODULE=on go get -v github.com/projectdiscovery/httpx/cmd/httpx
-GO111MODULE=on go get -v github.com/projectdiscovery/naabu/cmd/naabu
-GO111MODULE=on go get -v github.com/projectdiscovery/shuffledns/cmd/shuffledns
-GO111MODULE=on go get -v github.com/projectdiscovery/dnsx/cmd/dnsx
-GO111MODULE=on go get -v github.com/projectdiscovery/proxify/cmd/proxify
+go install github.com/003random/getJS@latest
+go install github.com/Ice3man543/SubOver@latest
+go install github.com/OJ/gobuster/v3@latest
+go install github.com/ffuf/ffuf@latest
+go install github.com/haccer/subjack@latest
+go install github.com/hahwul/dalfox/v2@latest
+go install github.com/hakluke/hakcheckurl@latest
+go install github.com/hakluke/hakrawler@latest
+go install github.com/hakluke/hakrevdns@latest
+go install github.com/j3ssie/metabigor@latest
+go install github.com/jaeles-project/gospider@latest
+go install github.com/lc/gau/v2/cmd/gau@latest
+go install github.com/lc/subjs@latest
+go install github.com/lukasikic/subzy@latest
+go install github.com/projectdiscovery/dnsx/cmd/dnsx@latest
+go install github.com/projectdiscovery/httpx/cmd/httpx@latest
+go install github.com/projectdiscovery/interactsh/cmd/interactsh-client@latest
+go install github.com/projectdiscovery/naabu/v2/cmd/naabu@latest
+go install github.com/projectdiscovery/notify/cmd/notify@latest
+go install github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
+go install github.com/projectdiscovery/proxify/cmd/proxify@latest
+go install github.com/projectdiscovery/shuffledns/cmd/shuffledns@latest
+go install github.com/projectdiscovery/subfinder/v2/cmd/subfinder@latest
+go install github.com/rverton/webanalyze/cmd/webanalyze@latest
+go install github.com/sensepost/gowitness@latest
+go install github.com/subfinder/goaltdns@latest
+go install github.com/tomnomnom/anew@latest
+go install github.com/tomnomnom/assetfinder@latest
+go install github.com/tomnomnom/burl@latest
+go install github.com/tomnomnom/fff@latest
+go install github.com/tomnomnom/gf@latest
+go install github.com/tomnomnom/gron@latest
+go install github.com/tomnomnom/httprobe@latest
+go install github.com/tomnomnom/meg@latest
+go install github.com/tomnomnom/qsreplace@latest
+go install github.com/tomnomnom/unfurl@latest
+go install github.com/tomnomnom/waybackurls@latest
+go install github.com/x1sec/commit-stream@latest
+
+pip3 install dirsearch
