--- a/install
+++ b/install
@@ -1,42 +1,34 @@
-sudo apt install -y dirb; sudo apt install -y dirbuster; sudo apt install -y exiftool; sudo apt install -y exploitdb; sudo apt install -y gcc; sudo apt install -y git; sudo apt install -y gpp; sudo apt install -y gpp-decrypt; sudo apt install -y hashcat; sudo apt install -y hash-identifier; sudo apt install -y joomscan; sudo apt install -y jsql; sudo apt install -y knockpy; sudo apt install -y libcurl4-openssl-dev; sudo apt install -y linux-exploit-suggester; sudo apt install -y masscan; sudo apt install -y metasploit-framework; sudo apt install -y mitmproxy; sudo apt install -y mlocate; sudo apt install -y msfpc; sudo apt install -y ncrack; sudo apt install -y neofetch; sudo apt install -y netcat; sudo apt install -y net-tools; sudo apt install -y nmap; sudo apt install -y nodejs; sudo apt install -y npm; sudo apt install -y openvpn; sudo apt install -y pdf-parser; sudo apt install -y perl; sudo apt install -y phantomjs; sudo apt install -y pipenv; sudo apt install -y powersploit; sudo apt install -y python3; sudo apt install -y python3-capstone; sudo apt install -y python3-distorm3; sudo apt install -y python3-pip; sudo apt install -y python-dev; sudo apt install -y python-distorm3; sudo apt install -y python-dnspython; sudo apt install -y python-setuptools; sudo apt install -y rainbowcrack; sudo apt install -y reaver; sudo apt install -y recon-ng; sudo apt install -y rename; sudo apt install -y ruby; sudo apt install -y ruby-dev; sudo apt install -y ruby-full; sudo apt install -y screenfetch; sudo apt install -y sfuzz; sudo apt install -y smtp-user-enum; sudo apt install -y sqlmap; sudo apt install -y sublist3r; sudo apt install -y wafw00f; sudo apt install -y websploit; sudo apt install -y weevely; sudo apt install -y wfuzz; sudo apt install -y whatweb; sudo apt install -y whois; sudo apt install -y wireshark; sudo apt install -y wpscan; sudo apt install -y yarn
+# Install Xcode Tools.
+xcode-select --install
+sudo softwareupdate --install-rosetta
+clear
 
-go install github.com/003random/getJS@latest
-go install github.com/Ice3man543/SubOver@latest
-go install github.com/OJ/gobuster/v3@latest
-go install github.com/ffuf/ffuf@latest
-go install github.com/haccer/subjack@latest
-go install github.com/hahwul/dalfox/v2@latest
-go install github.com/hakluke/hakcheckurl@latest
-go install github.com/hakluke/hakrawler@latest
-go install github.com/hakluke/hakrevdns@latest
-go install github.com/j3ssie/metabigor@latest
-go install github.com/jaeles-project/gospider@latest
-go install github.com/lc/gau/v2/cmd/gau@latest
-go install github.com/lc/subjs@latest
-go install github.com/lukasikic/subzy@latest
-go install github.com/projectdiscovery/dnsx/cmd/dnsx@latest
-go install github.com/projectdiscovery/httpx/cmd/httpx@latest
-go install github.com/projectdiscovery/interactsh/cmd/interactsh-client@latest
-go install github.com/projectdiscovery/naabu/v2/cmd/naabu@latest
-go install github.com/projectdiscovery/notify/cmd/notify@latest
-go install github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
-go install github.com/projectdiscovery/proxify/cmd/proxify@latest
-go install github.com/projectdiscovery/shuffledns/cmd/shuffledns@latest
-go install github.com/projectdiscovery/subfinder/v2/cmd/subfinder@latest
-go install github.com/rverton/webanalyze/cmd/webanalyze@latest
-go install github.com/sensepost/gowitness@latest
-go install github.com/subfinder/goaltdns@latest
-go install github.com/tomnomnom/anew@latest
-go install github.com/tomnomnom/assetfinder@latest
-go install github.com/tomnomnom/burl@latest
-go install github.com/tomnomnom/fff@latest
-go install github.com/tomnomnom/gf@latest
-go install github.com/tomnomnom/gron@latest
-go install github.com/tomnomnom/httprobe@latest
-go install github.com/tomnomnom/meg@latest
-go install github.com/tomnomnom/qsreplace@latest
-go install github.com/tomnomnom/unfurl@latest
-go install github.com/tomnomnom/waybackurls@latest
-go install github.com/x1sec/commit-stream@latest
+# Install brew.
+echo "Installing Brew"
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
-pip3 install dirsearch
+# Add brew to path.
+echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+eval "$(/opt/homebrew/bin/brew shellenv)"
+source ~/.zprofile
+clear
+
+# Array of Brew Packages.
+brew_packages=("burl" "dnsx" "exiftool" "exploitdb" "ffuf" "gau" "go" "gobuster" "gron" "hashcat" "httpx" "masscan" "metasploit" "naabu" "ncrack" "neofetch" "netcat" "nmap" "node" "nuclei" "rust" "screenfetch" "sfuzz" "sqlmap" "subfinder" "wget" "whatweb" "wireshark" "yarn")
+
+# Array of Go Packages.
+go_packages=("hakluke/hakcheckurl@latest" "hakluke/hakrawler@latest" "hakluke/hakrevdns@latest" "jaeles-project/gospider@latest" "rverton/webanalyze/cmd/webanalyze@latest" "sensepost/gowitness@latest" "subfinder/goaltdns@latest" "tomnomnom/anew@latest" "tomnomnom/assetfinder@latest" "tomnomnom/fff@latest" "tomnomnom/gf@latest" "tomnomnom/httprobe@latest" "tomnomnom/meg@latest" "tomnomnom/qsreplace@latest" "tomnomnom/unfurl@latest" "tomnomnom/waybackurls@latest")
+ 
+# Install all brew packages. 
+echo "Installing Brew Packages"
+for (( i=0; i<${#brew_packages[@]}; i++ )); do brew install "${brew_packages[$i]}" ; done
+clear
+
+# Install all go packages.
+echo "Installing Go Packages"
+for (( i=0; i<${#go_packages[@]}; i++ )); do go install github.com/ "${go_packages[$i]}" ; done
+clear
+
+# Add go tools to path.
+echo "export PATH=$PATH:$HOME/go/bin" >> ~/.zshrc
+source ~/.zshrc
